[gd_scene load_steps=2 format=3 uid="uid://b0gq5ks4d6gmu"]

[ext_resource type="Script" path="res://scripts/dialog_system.gd" id="1_dialog"]

[node name="DialogSystem" type="CanvasLayer"]
layer = 100
script = ExtResource("1_dialog")

[node name="DialogBox" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameLabel" type="Label" parent="DialogBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20

[node name="TextLabel" type="Label" parent="DialogBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 150.0
grow_horizontal = 2
autowrap_mode = 3

[node name="ContinueIndicator" type="Label" parent="DialogBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "â–¼"
horizontal_alignment = 2

[node name="ChoiceContainer" type="VBoxContainer" parent="DialogBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
